crates/forge_services/src/provider/openai/snapshots/forge_services__provider__openai__request__tests__assistant_message_with_tool_call_conversion.snap
---
source: crates/forge_services/src/provider/openai/request.rs
expression: router_message
---
{
  "role": "assistant",
  "content": "Using tool",
  "tool_calls": [
    {
      "id": "123",
      "type": "function",
      "function": {
        "name": "test_tool",
        "arguments": "{\"key\":\"value\"}"
      }
    }
  ]
}
