crates/forge_services/src/provider/openai/snapshots/forge_services__provider__openai__request__tests__user_message_conversion.snap
---
source: crates/forge_services/src/provider/openai/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
